# AKATSUKI

./: .gitignore  .travis.yml  AKATSUKI.sln  CMakeLists.txt  Makefile  README.md  build.sh
example/macos/ATExample/ATExample/: main.cpp
example/macos/ATExample/ATExample.xcodeproj/: project.pbxproj
platform/ios/AKATSUKI.xcodeproj/: project.pbxproj
platform/ios/io/: iATLocation.h  iATLocation.mm
platform/macos/AKATSUKI.xcodeproj/: project.pbxproj
platform/macos/AKATSUKI.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
platform/win/ATbat/ATbatBaseProc/: ATbatBaseProc.vcxproj  ATbatBaseProc.vcxproj.filters  ATbatBatchProc.cpp  ATbatBatchProc.h
platform/win/ATgae/: ATgae.vcxproj  ATgae.vcxproj.filters
platform/win/ATlib/: ATlib.vcxproj  ATlib.vcxproj.filters
platform/win/ATutl/ATutlBatchManager/: ATutlBatchManager.aps  ATutlBatchManager.cpp  ATutlBatchManager.vcxproj  ATutlBatchManagerDlg.cpp  (+4 more)
src/: AKATSUKI.sln
src/projects/ATgae/: ATgae.vcxproj  ATgae.vcxproj.filters  CMakeLists.txt
src/projects/ATgae/debugger/: ATgaeLog.cpp
src/projects/ATgae/engine/: ATgaeEngine.cpp  ATgaeEngineCreator.cpp
src/projects/ATgae/engine/core/: ATgaeCore.cpp  ATgaeCoreDrawGL.cpp  ATgaeCoreGL.cpp
src/projects/ATgae/engine/impl/: ATgaeImplGL.cpp
src/projects/ATgae/engine/window/: ATgaeWindowInfo.cpp  ATgaeWindowManager.cpp
src/projects/ATlib/: ATlib.vcxproj  ATlib.vcxproj.filters  CMakeLists.txt
test/ATlib/: CMakeLists.txt  Makefile
test/ATlib/src/: ATlibDateUtlTest.cpp  ATlibStringUtlTest.cpp  ATlibSysUtlTest.cpp  ATlibTest.cpp  ATlibVector2Test.cpp
(+86 files in other folders)
